# viet-adventure-connect-DATN

./: .env.example  .gitignore  README.md  booking_debug.json  debug_output.txt  debug_output_chat.txt  index.html  inspect_services.js  package-lock.json  package.json  populate_debug.json  stay_bookings.json  story_output.txt  testCommunityHubAPI.js  testConnection.ts  testCreateStoryWorkflow.js  testDestinationSearch.js  testDestinationSearch.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1757412594958-c323f902454b3.mjs
ai-service/: README.md  pyproject.toml  smoke_test.py
ai-service/src/: __init__.py  app.py  config.py  main.py
ai-service/src/agents/: chat_graph.py
ai-service/src/agents/chat/: graph.py  lc_tools.py  schema.py  state.py
ai-service/src/agents/hotel_finder/: graph.py  state.py
ai-service/src/agents/itinerary_planner/: __init__.py  graph.py  mongo_checkpointer.py  state.py  utils.py
ai-service/src/api/: router.py
ai-service/src/clients/: __init__.py  backend.py
ai-service/src/db/: __init__.py  connection.py  itinerary_repository.py  tour_repository.py
ai-service/src/models/: __init__.py  hotel.py
ai-service/src/prompts/: assistant.py  culinary.py  emergency.py  hotel.py  itinerary_planner.py  logistics.py  router.py  tour_matcher.py
ai-service/src/tools/: booking_tool.py  budget_calculator_tool.py  culinary_tool.py  hotel_adapters.py  hotel_search_tool.py  image_search_tool.py  route_builder_tool.py  safety_tips_tool.py  search.py  search_trips_tool.py  tour_matcher_tool.py  weather.py
src/: App.tsx  (+4 more)
(+334 files in other folders)
